apps/test-webpage/base/networking/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-webpage
  labels:
    app: test-webpage
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: http
    targetPort: 80
  selector:
    app: test-webpage
